fix scroll visible

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,6 +78,14 @@ strong {
 
 
 /*
+ * SCROLL HIDDEN
+ */
+.hidden-scroll{
+    overflow: hidden;
+}
+
+
+/*
  * TITLES
  */
 h1,
